--- a/index.html
+++ b/index.html
@@ -807,9 +807,8 @@
       `;
 
       if (hasil.status.includes("Lulus")) {
-        html += `<p class="success">Silakan hubungi admin YMS Simbang Kulon melalui WhatsApp di <strong>085134465945</strong> untuk mengetahui jadwal seleksi selanjutnya.</p>`;
-        html += `<p class="no success">Terima kasih.</p>`;
-      }
+        html += `<p class="success">Bagi Yang Lulus, Silakan hubungi admin YMS Simbang Kulon melalui WhatsApp di <strong>085134465945</strong> untuk mengetahui jadwal seleksi selanjutnya.</p>`;
+    }
       
       resultDiv.innerHTML = html;
     }
